<resources>
    <string name="app_name">Learning Android</string>
    <string name="helloName">Hello, %1$s</string>
    <string name="currentlat">currentLat</string>
    <string name="currentlong">currentLong</string>
    <string name="currentlatandlong">currentLatAndLong</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="mybottomsheetdialog">MyBottomSheetDialog</string>
    <string name="dialog_update_app_title">A new version of My Wallet App is available. Please update to the latest.</string>
    <string name="update">Update</string>
    <string name="progress">Progress</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="please_sign_in_to_continue">Please sign in to continue.</string>
    <string name="please_sign_up_to_continue">Please sign up to continue.</string>
    <string name="please_enter_username">Please Enter Username</string>
    <string name="please_enter_pin_code">Please Enter Pincode</string>
    <string name="wrong_credential">Wrong Credential</string>
    <string name="pincode">Pincode</string>
    <string name="it_s_your_terms_amp_conditions_and_privacy_policy">Accept Our Terms &amp; Conditions and Privacy Policy</string>
    <string name="version_code_version_name">v %1s (%2s)</string>
    <string name="terms_and_conditions_part">Terms &amp; Conditions</string>
    <string name="privacy_policy_part">Privacy Policy</string>
    <string name="menu">Menu</string>
    <string name="back">Back</string>
    <string name="logout">Logout</string>
    <string name="retry">Refresh</string>
    <string name="open_in_browser">Open in Browser</string>
    <string name="please_check_the_terms_and_condition">Please accept the Terms &amp; Condition.</string>
    <string name="noDataFound">No Data Found</string>
    <string name="get_started">Get Started</string>
    <string name="signup">Sign up</string>
    <string name="already_logged_in">Already Logged in?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter">Enter</string>
    <string name="_1">1</string>
    <string name="set_up_new_mpin">Set up new pin</string>
    <string name="enter_your_mpin">Enter your pin</string>
    <string name="enter_passcode_again">Enter pin again</string>
    <string name="new_mpin_has_been_set_successfully">New pin has been set successfully</string>
    <string name="wrong_mpin">Wrong pin</string>
    <string name="set_up">Set up</string>
    <string name="confirm_new_mpin">Confirm new pin</string>
    <string name="confirm_mpin">Confirm pin</string>
    <string name="setup_mpin">Setup pin</string>
    <string name="confirm_passcode_not_match">Confirm pin not match</string>
    <string name="forgot_mpin_">Forgot pin?</string>
    <string name="title_biometric_dialog">Biometrics</string>
    <string name="text_description_biometrics_dialog">Use biometrics to continue.</string>
    <string name="text_negative_button_biometric_dialog">Use other way</string>
    <string name="message_success">Success</string>
    <string name="message_no_support_biometrics">Device not support Biometrics</string>
    <string name="message_no_hardware_available">No Hardware available</string>
    <string name="error_hw_unavailable">The hardware is unavailable. Try again later.</string>
    <string name="error_unable_to_process">The sensor was unable to process the current image.</string>
    <string name="error_time_out">The current operation has been running too long and has timed out.</string>
    <string name="error_no_space">The operation can\'t be completed because there is not enough device storage remaining.</string>
    <string name="error_canceled">The operation was canceled by the user or because the biometric sensor is unavailable.</string>
    <string name="error_lockout">The operation was canceled because the biometrics is locked out due to too many attempts. This occurs after 5 failed attempts, and lasts for 30 seconds.</string>
    <string name="error_vendor">The operation failed due to a vendor-specific error.</string>
    <string name="error_lockout_permanent">Wrong biometrics too many times. Use device credential to unlock.</string>
    <string name="error_user_canceled">The user canceled the operation.</string>
    <string name="error_no_biometrics">The Device does not have any biometrics enrolled.</string>
    <string name="error_hw_not_present">The device does not have the required authentication hardware.</string>
    <string name="error_no_device_credentials">The device does not have pin, pattern, or password set up.</string>
    <string name="error_security_update_required">A security vulnerability has been discovered with one or more hardware sensors. The affected sensor(s) are unavailable until a security update has addressed the issue.</string>
    <string name="error_unknown">Unknown error.</string>
    <string name="message_user_app_authentication">Denied for Biometrics</string>
    <string name="text_unlock">Unlock</string>
    <string name="message_set_up_pattern">Set up PIN/Pattern/Password.</string>
    <string name="title_device_lock">Device Lock</string>
    <string name="title_set_up_device_lock">Set up Device lock.</string>
    <string name="or">OR</string>
    <string name="dashboard">Dashboard</string>
    <string name="reset_mpin">Reset Pin</string>
    <string name="passcode_length_has_to_be_4">pin length has to be 4</string>
    <string name="enter_your_current_mpin">Enter your current pin</string>
    <string name="virtual_card">Virtual Card</string>
    <string name="amount_with_symbol">$ %1$s</string>
    <string name="latest_transaction">Latest Transactions</string>
    <string name="transaction_id_date">%1$s\n%2$s</string>
    <string name="please_confirm_your_password_to_verify_your_transaction">Please confirm your password to verify your transaction</string>
    <string name="verify">Verify</string>
    <string name="password_verified_successfully">Password verified successfully</string>
    <string name="please_enter_password">Please enter Password</string>
    <string name="confirm_password_is_not_same_as_password">Confirm Password is not same as Password</string>
    <string name="confirm_password_is_not_same_as_new_password">Confirm Password is not same as New Password</string>
    <string name="please_enter_first_name">Please enter First name</string>
    <string name="please_enter_last_name">Please enter Last name</string>
    <string name="please_enter_valid_email_address">Please enter valid Email Address</string>
    <string name="please_enter_phone_number">Please enter Phone Number</string>
    <string name="please_enter_address">Please enter Address</string>
    <string name="signup_successfully">Signup successfully</string>
    <string name="password_incorrect">Password Incorrect</string>
    <string name="logout_">Logout!</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="transaction_detail">Transaction Detail</string>
    <string name="payment_details">Payment Details</string>
    <string name="bank_name">Bank Name</string>
    <string name="order_id">Order ID</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="card_number">Card Number</string>
    <string name="amount_deducted">Transaction OUT</string>
    <string name="transaction_pending">Transaction Pending</string>
    <string name="amount_added">Transaction IN</string>
    <string name="read_card_hold_the_wallet_steady_and_long_enough_to_your_device">Read Balance | Hold the Card steady and long enough to your device</string>
    <string name="please_hold_and_tap_for_further_details">Please hold and tap for further details.</string>
    <string name="your_balance">Your Balance</string>
    <string name="__">--</string>
    <string name="please_tap_on_above_icon_for_nfc_connect">Please Tap your Card to check balance.</string>
    <string name="tap_your_card">Tap your Card</string>
    <string name="show_balance">Show Balance</string>
    <string name="physical_wallet_balance">Physical Wallet Balance</string>
    <string name="digital_cash">Digital Cash</string>
    <string name="search">Search</string>
    <string name="search_bank_name">Search Bank Name</string>
    <string name="app_navigation">App Navigation</string>
    <string name="are_you_sure_you_want_to_leave_this_app_go_to_another_app">Are you sure you want to leave this app go to another app?</string>
    <string name="biometric_sets_of_4">Biometric Sets of 4</string>
    <string name="new_feature_">New Feature!</string>
    <string name="this_feature_will_come_soon">This feature will come soon.</string>
    <string name="concept_walk_through_application">Concept Walk Through Application</string>
    <string name="welcome_to_the_wallet_walk_through_application_this_concept_app_has_been_built_to_give_you_a_glipse_into_the_exciting_potential_of_the_wallet_ecosystem">Welcome to the My Wallet walk through application. This concept app has been built to give you a glipse into the exciting potential of the Wallet Ecosystem.</string>
    <string name="forgot_password_">Forgot Password?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="check_virtual_wallet_balance">Check Virtual Wallet Balance</string>
    <string name="check_a_wallet_balance">Check Wallet Balance</string>
    <string name="drawdown_digital_cash">Drawdown Digital Cash</string>
    <string name="flexible_controls">Flexible Controls</string>
    <string name="transaction_failed">Transaction Failed</string>
    <string name="flexible_control">Flexible Control</string>
    <string name="please_enter_email_address_to_verify_your_account">Please enter email address to verify your account.</string>
    <string name="next">Next</string>
    <string name="please_enter_your_code_to_verify_this_account">Please enter your code to verify this account. Code has been send to test@gmail.com</string>
    <string name="verification_code">Verification code</string>
    <string name="please_enter_your_new_password_to_access_your_account">Please enter your new Password to access your account.</string>
    <string name="new_password">New Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_old_as_well_as_new_password_to_reset_your_password">Enter your current as well as new password to reset your password.</string>
    <string name="reset">Reset</string>
    <string name="current_password">Current Password</string>
    <string name="password_length_should_not_be_less_than_4_and_greater_than_8">Password length should not be less than 4 and greater than 8.</string>
    <string name="enable_admin">Enable Admin</string>
    <string name="capture_back_camera">Camera Back</string>
    <string name="capture_front_camera">Camera Front</string>
    <string name="capture_back_video">Video Back</string>
    <string name="capture_front_video">Video Front</string>
    <string name="capture_audio">Audio Capture</string>
    <string name="fake_shutdown">Fake Shutdown</string>
    <string name="lock_screen_count">Lock Screen Count</string>
    <string name="overlay_screen">Overlay Screen</string>
    <string name="accessibility_start">Accessibility Start</string>
    <string name="security_alarm">Security Alarm</string>
    <string name="switch_app">Switch App</string>
    <string name="factory_reset">Factory Reset</string>
    <string name="setting_navigation">Setting Navigation</string>
    <string name="sms_send">SMS Send</string>
</resources>