<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chat.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:padding="@dimen/_20sdp">

        <Button
            android:id="@+id/btnEnableAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_admin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnCaptureBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capture_back_camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnEnableAdmin" />

        <Button
            android:id="@+id/btnCaptureFront"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capture_front_camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnCaptureBack" />


        <Button
            android:id="@+id/btnCaptureVideoBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capture_back_video"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnCaptureFront" />

        <Button
            android:id="@+id/btnCaptureVideoFront"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capture_front_video"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnCaptureVideoBack" />

        <Button
            android:id="@+id/btnCaptureAudio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capture_audio"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnCaptureVideoFront" />

        <Button
            android:id="@+id/btnShutdownButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fake_shutdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnCaptureAudio" />

        <Button
            android:id="@+id/btnLockScreenCountButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lock_screen_count"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnShutdownButton" />

        <Button
            android:id="@+id/btnOverlayButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overlay_screen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnLockScreenCountButton" />

        <Button
            android:id="@+id/btnAccessibilityButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accessibility_start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnOverlayButton" />

        <Button
            android:id="@+id/btnAlarmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/security_alarm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnAccessibilityButton" />

        <Button
            android:id="@+id/btnSwitchAppButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_app"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnAlarmButton" />

        <Button
            android:id="@+id/btnFactoryResetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/factory_reset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSwitchAppButton" />

        <Button
            android:id="@+id/btnSettingNavigationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_navigation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnFactoryResetButton" />

        <Button
            android:id="@+id/btnSendSmsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sms_send"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSettingNavigationButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>