<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background_layer"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".wallet.ui.resetpassword.ResetPasswordActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_16sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewResetPassword"
            style="@style/TextView.SemiBold.24"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/reset_password"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewDescription"
            style="@style/TextView.Medium.14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/enter_your_old_as_well_as_new_password_to_reset_your_password"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewResetPassword" />

        <!-- Old Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutOldPassword"
            style="@style/FilledBoxTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewDescription"
            app:startIconDrawable="@drawable/ic_outline_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextOldPassword"
                style="@style/TextInputEditText.Regular.12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/current_password"
                android:inputType="textPassword"
                android:longClickable="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutNewPassword"
            style="@style/FilledBoxTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutOldPassword"
            app:startIconDrawable="@drawable/ic_outline_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextNewPassword"
                style="@style/TextInputEditText.Regular.12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:longClickable="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Confirm Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutConfirmPassword"
            style="@style/FilledBoxTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutNewPassword"
            app:startIconDrawable="@drawable/ic_outline_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextConfirmPassword"
                style="@style/TextInputEditText.Regular.12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:longClickable="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvResetPasswordNoticeMsg"
            style="@style/TextView.Regular.12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_10sdp"
            android:gravity="start"
            android:text="@string/password_length_should_not_be_less_than_4_and_greater_than_8"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutConfirmPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonVerify"
            style="@style/Button.Medium.12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_36sdp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/reset"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvResetPasswordNoticeMsg" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>