<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background_layer"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".wallet.ui.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_16sdp"
        android:paddingBottom="@dimen/_16sdp">

        <ImageView
            android:id="@+id/ivLoginLogo"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_wallet_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewDescription"
            style="@style/TextView.Medium.14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/please_sign_in_to_continue"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivLoginLogo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutUserName"
            style="@style/FilledBoxTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewDescription"
            app:startIconDrawable="@drawable/ic_outline_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextUserName"
                style="@style/TextInputEditText.Regular.12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            style="@style/FilledBoxTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutUserName"
            app:startIconDrawable="@drawable/ic_outline_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                style="@style/TextInputEditText.Regular.12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:longClickable="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cbLoginCheck"
            android:layout_width="@dimen/_45sdp"
            android:layout_height="0dp"
            android:layout_marginStart="-10dp"
            android:checked="true"
            app:buttonIconTint="@color/colorPrimary"
            app:buttonTint="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/tvLogInPortionTandP"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvLogInPortionTandP" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvLogInPortionTandP"
            style="@style/TextView.Regular.12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:padding="@dimen/_8sdp"
            android:text="@string/it_s_your_terms_amp_conditions_and_privacy_policy"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cbLoginCheck"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSignup"
            style="@style/OutlineButton.Medium.12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:backgroundTint="@color/white"
            android:text="@string/signup"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toStartOf="@id/buttonLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLogInPortionTandP" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLogin"
            style="@style/Button.Medium.12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/login"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="@id/buttonSignup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/buttonSignup"
            app:layout_constraintTop_toTopOf="@id/buttonSignup" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewForgotPassword"
            style="@style/TextView.Regular.12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/forgot_password_"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonSignup" />

        <View
            android:id="@+id/viewForgotPassword"
            android:layout_width="0dp"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="@id/textViewForgotPassword"
            app:layout_constraintStart_toStartOf="@id/textViewForgotPassword"
            app:layout_constraintTop_toBottomOf="@id/textViewForgotPassword" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvLoginPortionBuildName"
            style="@style/TextView.Regular.10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewForgotPassword"
            tools:text="v 1.2.2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>